--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Vite App</title>
   </head>
   <body>
-    <main class="h-screen bg-gradient-to-b flex flex-col justify-between from-indigo-900/40 to-10% to-slate-950 text-slate-400">
+    <main class="h-screen flex flex-col justify-between bg-rose-50/50">
       <header class="flex justify-between items-center p-10">
-        <div class="font-bold text-2xl bg-gradient-to-r from-indigo-400 to-sky-400 bg-clip-text text-transparent tracking-tighter">indrazm.</div>
-        <div class="flex gap-8 backdrop-blur-md bg-slate-500/20 px-6 py-2 rounded-full">
+        <div class="font-black text-2xl bg-gradient-to-r from-rose-400 to-80% to-yellow-400 bg-clip-text text-transparent tracking-tighter">indrazm.</div>
+        <div class="flex gap-8 bg-zinc-500/5 text-zinc-800 px-6 py-2 rounded-full">
           <div class="link">About</div>
           <div class="link">Craft</div>
           <div class="link">Media</div>
@@ -18,14 +18,15 @@
         <div class="link">Contact</div>
       </header>
 
-      <section class="max-w-4xl m-auto grid grid-cols-3 gap-8 relative">
-        <div class="absolute w-20 h-20 bg-indigo-300/50 rounded-full blur-2xl -z-10"></div>
-        <div class="absolute w-60 h-60 bg-rose-400/10 rounded-full blur-2xl -z-10 -bottom-20 -right-20"></div>
-
-        <div class="card col-span-2 space-y-4">
+      <section class="max-w-4xl mx-12 lg:m-auto grid grid-cols-1 lg:grid-cols-3 gap-8 relative">
+        <div class="card lg:col-span-2 space-y-4 relative">
           <img src="public/indra.png" class="w-16 h-16 object-cover rounded-full" />
-          <div class="flex gap-2 items-center">
-            <div class="w-2 h-2 bg-emerald-300 animate-pulse rounded-full"></div>
+          <div>
+            <div>Indra Zulfi</div>
+            <div class="text-xs text">3D Tech. Lead @Designstripe, CA</div>
+          </div>
+          <div class="flex gap-2 text-xs font-medium items-center absolute top-5 right-8 bg-emerald-50 border-emerald-300 border-[1px] py-2 px-4 rounded-full">
+            <div class="w-2 h-2 bg-emerald-500 animate-pulse rounded-full"></div>
             <p>Available for Collaboration</p>
           </div>
           <div class="flex gap-2 items-baseline">
@@ -33,39 +34,39 @@
           </div>
         </div>
 
-        <div class="bg-sky-300 flex justify-center items-center rounded-3xl">
-          <img src="public/twitter.svg" width="80" class="hover:scale-110 duration-300 transition ease-in-out" />
-        </div>
+        <a href="https://twitter.com/indrazulfi" target="_blank">
+          <div class="card bg-sky-300 flex justify-center items-center cursor-pointer">
+            <img src="public/twitter.svg" width="80" class="hover:scale-110 duration-300 transition ease-in-out" /></div
+        ></a>
 
-        <div class="relative bg-yellow-500 flex justify-center items-center rounded-3xl">
+        <div class="card relative bg-yellow-300 flex justify-center items-center rounded-3xl">
           <div class="text-black font-bold tracking-tighter">Desigstripe mockups</div>
-          <div
-            class="p-4 rounded-full absolute bottom-4 left-4 bg-slate-950 hover:bg-sky-500 hover:text-center hover:text-white cursor-pointer duration-300 ease-in-out"
-          >
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-6 h-6">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 19.5l15-15m0 0H8.25m11.25 0v11.25" />
-            </svg>
-          </div>
+          <a href="https://designstripe.com/mockups" target="_blank">
+            <div class="p-4 rounded-full absolute bottom-4 left-4 bg-white hover:text-center hover:text-yellow-400 cursor-pointer duration-300 ease-in-out">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-6 h-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 19.5l15-15m0 0H8.25m11.25 0v11.25" />
+              </svg></div
+          ></a>
         </div>
 
-        <div class="col-span-2 bg-white h-72 p-12 rounded-3xl">
+        <div class="card lg:col-span-2 bg-white h-72 p-12 rounded-3xl">
           <div class="space-y-3">
-            <h3 class="text-black tracking-tight">Collaboration?</h3>
-            <p class="text-black/60 tracking-tight">I am a superficient in building impactful products. Let's do collaboration!</p>
+            <h3 class="text-black/80 tracking-tight">Collaboration?</h3>
+            <p class="text-black/60 tracking-tight text-xs">I have a strong track record of developing impactful products. Let's work together!</p>
             <input
               id="form"
               placeholder="email@yours.com"
-              class="w-full tracking-tight text-black/80 text-2xl focus:outline-none py-4 placeholder:text-black/20 border-b-2 font-medium bg-transparent border-slate-300"
+              class="w-full tracking-tight text-black/80 text-2xl focus:outline-none py-4 placeholder:text-black/20 border-b-[1px] font-medium bg-transparent border-slate-300"
             />
             <div>
-              <p class="text-black/80 text-xs text-right -mt-1">Enter to submit</p>
+              <p class="text-black/80 text-xs text-right -mt-1">Enter to blow!</p>
             </div>
           </div>
         </div>
       </section>
 
       <footer class="p-8 text-center">
-        <p>Build with Love. Devscale.id</p>
+        <p>build with ❤️ Love. indrazm.com</p>
       </footer>
     </main>
     <script type="module" src="/src/javascript/main.js"></script>
