--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Vite App</title>
   </head>
   <body>
-    <main class="h-screen flex flex-col justify-between bg-rose-50/50">
+    <main class="min-h-screen flex flex-col gap-20 justify-between bg-rose-50/50">
       <header class="flex justify-between items-center p-10">
         <div class="font-black text-2xl bg-gradient-to-r from-rose-400 to-80% to-yellow-400 bg-clip-text text-transparent tracking-tighter">indrazm.</div>
-        <div class="flex gap-8 bg-zinc-500/5 text-zinc-800 px-6 py-2 rounded-full">
-          <div class="link">About</div>
+        <div class="flex gap-8 bg-zinc-500/5 text-zinc-800 px-2 py-2 rounded-full">
+          <div class="link bg-white text-black py-1 px-4 rounded-full">About</div>
           <div class="link">Craft</div>
-          <div class="link">Media</div>
+          <div class="link pr-4">Media</div>
         </div>
         <div class="link">Contact</div>
       </header>
@@ -29,7 +29,7 @@
             <div class="w-2 h-2 bg-emerald-500 animate-pulse rounded-full"></div>
             <p>Available for Collaboration</p>
           </div>
-          <div class="flex gap-2 items-baseline">
+          <div class="flex gap-2 items-baseline h-[42px]">
             <h1 id="heading"></h1>
           </div>
         </div>
