--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
       </section>
 
       <footer class="p-8 text-center">
-        <p>build with ❤️ Love. indrazm.com</p>
+        <p>
+          build with ❤️ Love. design inspired by <a href="https://nevflynn.com/"><span class="hover:text-rose-500 duration-300 ease-out">nevflynn</span></a>
+        </p>
       </footer>
     </main>
     <script type="module" src="/src/javascript/main.js"></script>
