--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       </header>
 
       <section class="max-w-4xl mx-12 lg:m-auto grid grid-cols-1 lg:grid-cols-3 gap-8 relative">
-        <div class="card lg:col-span-2 space-y-4 relative">
-          <img src="public/indra.png" class="w-16 h-16 object-cover rounded-full" />
+        <div id="card1" class="card lg:col-span-2 space-y-4 relative overflow-hidden">
+          <img id="avatar" src="public/indra.png" class="w-16 h-16 object-cover rounded-full absolute" />
           <div>
             <div>Indra Zulfi</div>
             <div class="text-xs text">3D Tech. Lead @Designstripe, CA</div>
